<resources>
    <string name="app_name">AudSnap</string>
    <string name="facebook_app_id">1134818733256927</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_username">Username</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_signin">Sign In</string>
    <string name="title_activity_signin">SigninActivity</string>

    <string name="already_signup">Already a member?</string>
    <string name="signin_now">Sign in.</string>
    <string name="not_registered">Dont have an account?</string>
    <string name="signup_now">Sign up.</string>
    <string name="title_activity_register_username">RegisterUsername</string>
    <string name="give_username">Give yourself a nice username</string>
    <string name="enter_username">Username</string>
    <string name="register_me_with_this_username">Register me with this username</string>
    <string name="username_created_successfully">You are now ready to use the app, Here you go</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password?</string>
    <string name="password_reset_msg">Please follow instructions sent to your email to reset your password</string>

    <string name="reset_password_email_hint">Tap here to enter email</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="msg_profile_picture_changed">Profile picture changed successfully</string>
    <string name="title_activity_full_imageview">FullImageviewActivity</string>
    <string name="title_activity_crop_image">CropImageActivity</string>

    <string name="change_image">Change Picture</string>
    <string name="remove_image">Remove Picture</string>

    <string name="error_removing_picture">Error Removing Profile Picture</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
</resources>
