<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.audsnap.workingapp.SigninActivity"
    tools:showIn="@layout/activity_signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="86dp"
        />

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditTextTheme"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signinemail"
            android:textColor="@color/colorAccent"
            android:inputType="textEmailAddress"
            android:singleLine="true"

            android:hint="@string/title_email"
            android:textColorHint="#fff"
            android:paddingTop="4dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:theme="@style/MyEditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signinpassword"
            android:textColor="@color/colorAccent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/MyEditTextTheme"
            android:hint="@string/title_password"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin"
        android:text="@string/title_signin"
        android:background="@drawable/signinbuttonstate"
        android:textColor="@drawable/selector"
        android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="16dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:text="@string/forgot_password"
            android:textColor="#fff"
            />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center|bottom"
            android:textSize="20dp"
            android:text="@string/not_registered"
            android:textColor="#8fff"
            />
        <TextView
            android:id="@+id/signuptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="16dp"
            android:layout_gravity="center|bottom"
            android:textSize="20dp"
            android:text="@string/signup_now"
            android:textColor="#fff"
            />
    </LinearLayout>


</LinearLayout>
